<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_nieuwsbrief"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gebruiker.nathalievansterkenburg_pset6.NieuwsbriefActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nieuwsinfo"
        android:textSize="20sp"
        android:id="@+id/info"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/info"
        android:layout_marginTop="50dp"
        android:textSize="15sp"
        android:text="@string/aangemeld"
        android:id="@+id/ingeschreven"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ingeschreven"
        android:text="@string/aanmelden"
        android:id="@+id/aanmelden"
        android:onClick="meldAan"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ingeschreven"
        android:visibility="gone"
        android:text="@string/afmelden"
        android:id="@+id/afmelden"
        android:onClick="meldAf"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/back"
        android:id="@+id/backtosearch"
        android:onClick="backToSearch"/>


</RelativeLayout>
