<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gebruiker.nathalievansterkenburg_pset6.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructie"
        android:textSize="16sp"
        android:layout_alignParentTop="true"
        android:id="@+id/introduction"/>

    <EditText
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/introduction"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:id="@+id/email"/>

    <EditText
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:id="@+id/password"/>

    <EditText
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="160dp"
        android:layout_marginStart="160dp"
        android:layout_alignTop="@id/email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:id="@+id/loginemail"/>

    <EditText
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/loginemail"
        android:layout_alignStart="@id/loginemail"
        android:layout_below="@id/loginemail"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:id="@+id/loginpassword"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:id="@+id/create"
        android:text="@string/create"
        android:onClick="createUser"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/loginemail"
        android:layout_alignStart="@id/loginemail"
        android:layout_below="@id/loginpassword"
        android:id="@+id/login"
        android:text="@string/signin"
        android:onClick="logIn"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/create"
        android:id="@+id/inlogerror" />

</RelativeLayout>
