<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gebruiker.nathalievansterkenburg_pset6.SearchActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/useremail"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/nieuwsbrief"
        android:id="@+id/tonieuwsbrief"
        android:onClick="startNieuwsbrief"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tonieuwsbrief"
        android:id="@+id/search"
        android:hint="@string/placename" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tonieuwsbrief"
        android:layout_toRightOf="@id/search"
        android:layout_toEndOf="@id/search"
        android:id="@+id/confirmsearch"
        android:text="@string/search"
        android:onClick="searchSchools"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@id/search"
        android:id="@+id/listofschools"/>

</RelativeLayout>
